# bagan-edge-detection-critique

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: angle_reproduction_sweep.py  benchmark_all.py  gpu_env_probe.py  maritime_benchmark.py  real_maritime_panels.py  wvf_scale_sweep.py
datasets/: README.md
models/: README.md
paper/: critique.tex  generate_figures.py
results/: critique_report.md  source_paper_gap_review.md
scripts/: analyze_results.py  biped_fill_and_plot.py  canny_postprocess_test.py  fill_heatmap.py  generate_ablation_plots.py  generate_biped_plots.py  generate_snr_plots.py  plot_cnn_vs_wvf.py  plot_cnn_vs_wvf_comparison.py  plot_compute_cost.py  plot_wvf_heatmap_full.py  rerun_biped_1001.py  run_biped_ablation.py  run_biped_ablation_full.py  run_biped_lf_oom.py  run_cuda_test.py  run_full_dataset_ablation.py  run_low_ns_sweep.py  run_single_image_ablation.py  run_snr_ablation.py  run_widefieldnet_fullres.py  run_widefieldnet_sliding.py  run_widefieldnet_snr.py  save_cnn_edge_maps.py  save_sliding_edge_maps.py  snr_smoke_test.py  test_lf_batching.py
slurm/: biped_lf_ablation.sbatch  biped_rerun_1001.sbatch  canny_test.sbatch  combine_independent_pdfs.sbatch  compile_independent_paper.sbatch  full_dataset_ablation.sbatch  probe_gpu_env.sbatch  run_agent_bundle.sbatch  run_angle_reproduction_cpu.sbatch  run_benchmark.sbatch  run_benchmark_exact.sbatch  run_critique.sbatch  run_figures.sbatch  run_maritime.sbatch  run_paper.sbatch  run_paper_figures.sbatch  run_real_maritime_panels.sbatch  run_wvf_scale_cpu.sbatch  setup_env.sh  (+5 more)
(+74 files in other folders)
