[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgecritic"
version = "0.1.0"
description = "Wide View Filter and Line Filter for edge detection research"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
cuda = ["torch>=2.0"]
viz = ["matplotlib>=3.7"]
all = ["torch>=2.0", "matplotlib>=3.7"]
dev = ["pytest", "torch>=2.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]
